kubeyaml/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: accounting
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: dashboard.accounting.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: my-release-kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
